--- a/index.html
+++ b/index.html
@@ -391,6 +391,19 @@
                             <small>
                                 &copy; 2024 - Derechos reservados a <a href="https://leganux.com">leganux.com</a>
                             </small>
+
+                            <br>
+                            <br>
+                            <small>
+                                <a target="_blank" style="color: #ffffff;" href="/legal.pdf">Politica de Privacidad y
+                                    Terminos y condiciones </a>
+                                <br>
+                                <br>
+                                <br>
+                                <a target="_blank" style="color: #282828;"
+                                    href="https://forms.gle/ALhXCiizGiHQ5sGf9">Cuestionario</a>
+                            </small>
+
                         </center>
                     </div>
                 </div>
@@ -586,7 +599,7 @@
                 },
                 {
                     title: "Lavanderia Blanquita",
-                    file: "/songs/leganuxsomosfuturo.mp3",
+                    file: "/songs/lavanderiablanquita.mp3",
                     time: "01:59",
                     description: "Lavanderia blanquita, precio y calidad en el lavado de tu ropa",
                     image: "/lavanderia.jpg",
