--- a/index.html
+++ b/index.html
@@ -400,8 +400,8 @@
                                 <br>
                                 <br>
                                 <br>
-                                <a target="_blank" style="color: #282828;"
-                                    href="https://forms.gle/ALhXCiizGiHQ5sGf9">Cuestionario</a>
+                                <a target="_blank" style="color: #ffffff;"
+                                    href="https://forms.gle/TkSR33CE1hEn1B9N8">Cuestionario</a>
                             </small>
 
                         </center>
